Fixed logo bug on firefox

--- a/assets/sass/components/_main-header.scss
+++ b/assets/sass/components/_main-header.scss
@@ -17,6 +17,7 @@
   .header-logo__image {
     max-height: 24px;
     width: 100%;
+    min-width: 8.4em;
     max-width: 8.4em;
   }
 }
